added implementation & fixed decode_uri on redirect
